<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eenet.security.oauth2</groupId>
	<artifactId>integration-tests</artifactId>
	<version>1.00-SNAPSHOT</version>
	<name>security framework integration test</name>

	<profiles>
		<profile>
			<id>DEV-ENV</id>
			<properties>
				<zookeeper.address>172.16.165.222:2181</zookeeper.address>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
	</profiles>
	<properties>
		<junit.version>4.12</junit.version>
		<eenet.security.version>1.00-SNAPSHOT</eenet.security.version>
		<spring.version>4.2.2.RELEASE</spring.version>
		<aspectj.version>1.8.7</aspectj.version>
		<dubbo.version>2.5.3</dubbo.version>
	</properties>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<includes>
						<include> **/*Tester.java</include>
						<include> **/Test*.java</include>
					</includes>
					<forkMode>once</forkMode>
					<argLine>-Xms1050m -Xmx1050m -XX:PermSize=512m -XX:MaxPermSize=512m</argLine>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>eenet.security.oauth2</groupId>
			<artifactId>service</artifactId>
			<version>${eenet.security.version}</version>
		</dependency>
		<dependency>
			<groupId>eenet.security.oauth2.plugins</groupId>
			<artifactId>dubbo-provider</artifactId>
			<version>${eenet.security.version}</version>
		</dependency>
		<dependency>
			<groupId>eenet.security.oauth2.plugins</groupId>
			<artifactId>dubbo-consumer</artifactId>
			<version>${eenet.security.version}</version>
		</dependency>

		<!-- Spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>${aspectj.version}</version>
		</dependency>

		<!-- dubbo -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>dubbo</artifactId>
			<version>${dubbo.version}</version>
		</dependency>
		<dependency>
			<groupId>com.101tec</groupId>
			<artifactId>zkclient</artifactId>
			<version>0.7</version>
		</dependency>
		<dependency>
			<groupId>com.netflix.curator</groupId>
			<artifactId>curator-framework</artifactId>
			<version>1.3.3</version>
		</dependency>

		<!-- junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>